fix horizontal overflow

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: .15em;
   margin: 0px;
+  overflow-x: hidden;
 }
 
 html {
